<resources>
    <string name="app_name">ReUsableStylesRND</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">With Widget Styles</string>
    <string name="second_fragment_label">No Widget Styles</string>
    <string name="widgets_fragment_label">Tingg Widgets</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">Email address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="hint_body">Some body</string>
    <string name="action_toggle_docs">Toggle docs</string>
</resources>
