<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_widgets">

    <fragment
        android:id="@+id/fragment_widgets"
        android:name="com.toshngure.reusablestylesrnd.fragment.WidgetsFragment"
        android:label="@string/widgets_fragment_label"
        tools:layout="@layout/fragment_widgets">

        <action
            android:id="@+id/to_fragment_first"
            app:destination="@id/fragment_first" />

    </fragment>

    <fragment
        android:id="@+id/fragment_first"
        android:name="com.toshngure.reusablestylesrnd.fragment.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/to_fragment_second"
            app:destination="@id/fragment_second" />
    </fragment>
    <fragment
        android:id="@+id/fragment_second"
        android:name="com.toshngure.reusablestylesrnd.fragment.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/to_fragment_widgets"
            app:destination="@id/fragment_widgets" />

    </fragment>

</navigation>