<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".fragment.SecondFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/ic_call_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingRight="8dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/ic_email_black_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingRight="8dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="3dp"
        app:boxCornerRadiusBottomStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxCornerRadiusTopStart="3dp"
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/ic_lock_black_24dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:hint="@string/hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingRight="8dp"
            android:paddingBottom="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bottomButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/next" />

</LinearLayout>